Major refactoring: - poms updated - grizzly + jersey + spring in server RESTful logic - some changes in client stub code - used 2.7 gwt for incremental compilation - dependencies update - moved from xml to java config for spring - logback used for logging - typesafe used for configuration