@@ -12,92 +12,93 @@
     <packaging>war</packaging>
     <artifactId>client</artifactId>
 
-
     <properties>
         <!-- GWT -->
-        <gwt.version>2.5.1</gwt.version>
         <gwt.style>OBF</gwt.style>
         <!-- Maven -->
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
-        <gwtVersion>2.6.0</gwtVersion>
-        <gwtPluginVersion>2.6.0</gwtPluginVersion>
+        <gwt.maven.plugin.version>${gwt.version}</gwt.maven.plugin.version>
     </properties>
 
     <dependencies>
-<!--        <dependency>
-            <groupId>com.github.programmerwars</groupId>
-            <artifactId>common</artifactId>
-            <version>0.0.1</version>
-        </dependency>-->
         <dependency>
             <groupId>com.google.gwt</groupId>
             <artifactId>gwt-user</artifactId>
-            <version>${gwtVersion}</version>
+            <version>${gwt.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.gwt</groupId>
             <artifactId>gwt-servlet</artifactId>
-            <version>${gwtVersion}</version>
+            <version>${gwt.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.gwt</groupId>
             <artifactId>gwt-codeserver</artifactId>
-            <version>${gwtVersion}</version>
+            <version>${gwt.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.gwt</groupId>
+            <artifactId>gwt-dev</artifactId>
+            <version>${gwt.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.symulakr</groupId>
+            <artifactId>gwt-generators</artifactId>
+            <version>0.2.2</version>
+            <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.google.gwt</groupId>
+                    <artifactId>gwt-dev</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
     <build>
-        <outputDirectory>${webappDirectory}/WEB-INF/classes</outputDirectory>
-
-        <resources>
-            <resource>
-                <directory>test/src/main/resources</directory>
-            </resource>
-        </resources>
-
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>add-source</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>add-source</goal>
+                        </goals>
+                        <configuration>
+                            <sources>
+                                <source>${project.build.directory}/generated-sources/gwt/</source>
+                            </sources>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
-            <!-- GWT -->
-            <!-- 'mvn gwt:run' -->
-            <!-- 'mvn gwt:debug' -->
-            <!-- 'mvn gwt:compile' -->
-            <!-- 'mvn gwt:test' or 'mvn integration-test' -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>gwt-maven-plugin</artifactId>
                 <version>${gwt.version}</version>
-                <configuration>
-                    <strict>true</strict>
 
-                    <testTimeOut>180</testTimeOut>
-                    <mode>htmlunit</mode>
-                    <!-- Switch to a suite to run tests faster -->
-                    <!-- <includes>**/*GwtTestSuite.java</includes> -->
-                    <!-- <excludes>**/*GwtTest.java</excludes> -->
-                    <includes>**/*GwtTest.java</includes>
-
-                    <extraJvmArgs>-Xss1024K -Xmx1024M -XX:MaxPermSize=256M</extraJvmArgs>
-                    <logLevel>INFO</logLevel>
-                    <style>${gwt.style}</style>
-
-                    <copyWebapp>true</copyWebapp>
-                    <hostedWebapp>${webappDirectory}</hostedWebapp>
-
-                    <runTarget>client.html</runTarget>
-                    <module>com.github.programmerwars.client</module>
-                </configuration>
                 <executions>
                     <execution>
                         <goals>
                             <goal>compile</goal>
-                            <goal>test</goal>
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <logLevel>DEBUG</logLevel>
+                    <localWorkers>4</localWorkers>
+                    <disableCastChecking>true</disableCastChecking>
+                    <style>${gwt.style}</style>
+                    <compileReport>true</compileReport>
+                    <extraJvmArgs>-Xmx1024m -Xss8m</extraJvmArgs>
+                    <draftCompile>true</draftCompile>
+                    <modules>
+                        <module>com.github.programmerwars.ProgrammerWarsClient</module>
+                    </modules>
+                </configuration>
             </plugin>
         </plugins>
     </build>
